# GlobalHotkey

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPENDENTS.md  LICENSE  LICENSE.spdx  README.md
.changes/: config.json  objc06.md
Source/: error.rs  hotkey.rs  lib.rs
Source/platform_impl/: mod.rs  no-op.rs
Source/platform_impl/macos/: ffi.rs  mod.rs
Source/platform_impl/windows/: mod.rs
Source/platform_impl/x11/: mod.rs
examples/: egui.rs  iced.rs  tao.rs  winit.rs
src/: error.rs
