[dependencies]
crossbeam-channel = "0.5"
keyboard-types = "0.7"
once_cell = "1"
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "2"

[dev-dependencies]
async-std = "1.12.0"
eframe = "0.27"
iced = "0.12.1"
tao = "0.30"
winit = "0.30"

[features]
serde = ["dep:serde"]

[lib]
path = "Source/lib.rs"

[package]
categories = ["gui"]
description = "Global hotkeys for Desktop Applications"
documentation = "https://docs.rs/global-hotkey"
edition = "2021"
keywords = ["windowing", "global", "global-hotkey", "hotkey"]
license-file = "LICENSE"
name = "global-hotkey"
readme = "README.md"
repository = "https://github.com/amrbashir/global-hotkey"
rust-version = "1.71"
version = "0.6.3"

[target]

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))']

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
x11-dl = "2.21"

[target.'cfg(target_os = "macos")']

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.0"
objc2-app-kit = { version = "0.3.0", default-features = false, features = [
  "std",
  "NSEvent",
] }

[target.'cfg(target_os = "windows")']

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_Foundation",
	"Win32_System_SystemServices",
	"Win32_Graphics_Gdi",
	"Win32_UI_Shell",
	"Win32_UI_Input_KeyboardAndMouse",
]
version = "0.59"
